# AoC-2024

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
input/: README.md
src/: day1.py  day2.py  day3.py  day4.py  day5.py  template.py
tests/: answers  test_answers.py
